--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~51.0.18",
@@ -17,12 +19,10 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gifted-chat": "^2.4.0",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/netinfo": "11.3.1"
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
