--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~51.0.18",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-maps": "^1.17.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "expo-location": "~17.0.1",
-    "expo-image-picker": "~15.0.7"
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
