--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-maps": "^1.17.1",
     "react-native-safe-area-context": "^4.10.5",
